Fixes search input position on mobile

--- a/style/app.css
+++ b/style/app.css
@@ -700,8 +700,7 @@ button {
   left: 0;
   display: flex;
   justify-content: center;
-  /* align-items: flex-end; */
-  align-items: center;
+  align-items: flex-end;
   pointer-events: none;
   z-index: 2;
   padding: 0 1.2rem;
@@ -856,6 +855,7 @@ button {
 
   .search {
     left: 50%;
+    align-items: center;
   }
 
   form {
